srcs/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: grafana
    labels:
      name: grafana
---
apiVersion: v1
kind: Namespace
metadata:
    name: influxdb
    labels:
      name: influxdb
---
apiVersion: v1
kind: Namespace
metadata:
    name: mysql
    labels:
      name: mysql
---
apiVersion: v1
kind: Namespace
metadata:
    name: wordpress
    labels:
      name: wordpress
---
apiVersion: v1
kind: Namespace
metadata:
    name: phpmyadmin
    labels:
      name: phpmyadmin
---
apiVersion: v1
kind: Namespace
metadata:
    name: nginx
    labels:
      name: nginx
