srcs/ftps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps-deployment
  labels:
    app: ftps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps-img
        imagePullPolicy: Never
        ports:
        - containerPort: 21
